--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -33,7 +33,7 @@
                                                FixDay="1" FixMonth="1" OpenTo="OpenTo.Year"
                                                PickerVariant="PickerVariant.Dialog"
                                                Editable="true"
-                                               Label="Date of Birth"
+                                               Label="Born in"
                                                Class="field-md"
                                                Required="true" />
 
