--- a/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
@@ -1,11 +1,9 @@
 ﻿<MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h5">
-            Position change chart
-        </MudText>
+        <MudText Typo="Typo.h5">Position change chart</MudText>
     </TitleContent>
     <DialogContent>
-        <MudContainer Class="pa-4" Style="min-width: 800px">
+        <MudContainer Class="pa-4" Style="min-width: 1000px; min-height: 600px">
             @if (!loading)
             {
                 <ApexCharts.ApexChart TItem="DataPoint" Title="Position progression" Options="@options" Height="500">
@@ -31,7 +29,7 @@
                                                 Stroke="@DnfSet.Stroke" />*@
                 </ApexCharts.ApexChart>
 
-                <ApexCharts.ApexChart TItem="DataPoint" Title="Other" Options="@moreOptions" Height="300">
+                @*<ApexCharts.ApexChart TItem="DataPoint" Title="Other" Options="@moreOptions" Height="300">
                     <ApexCharts.ApexPointSeries TItem="DataPoint"
                                                 Items="@DnfSet.DataPoints"
                                                 Name="@DnfSet.Label"
@@ -40,7 +38,7 @@
                                                 YValue="@(e => e.YData)"
                                                 OrderBy="(e => e.X)"
                                                 Stroke="@DnfSet.Stroke" />
-                </ApexCharts.ApexChart>
+                </ApexCharts.ApexChart>*@
             }
         </MudContainer>
     </DialogContent>
@@ -88,7 +86,7 @@
 
             var sameSeenTeams = seenTeamIdentifiers.Count(e => e == driver.SeasonTeamId);
 
-            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 3 };
+            dataSet.Stroke = new ApexCharts.SeriesStroke { Color = driver.Colour, DashSpace = (2 * sameSeenTeams), Width = 5 };
 
             seenTeamIdentifiers.Add(driver.SeasonTeamId);
             DataSets.Add(dataSet);
@@ -105,12 +103,12 @@
     private void SetOptions()
     {
         options.Yaxis = new()
+            {
+                new ApexCharts.YAxis
                 {
-                    new ApexCharts.YAxis
-                    {
-                        Reversed = true,
-                    },
-                };
+                    Reversed = true,
+                },
+            };
     }
 
     private List<DriverLapPosition> DetermineLapPositions()
@@ -138,7 +136,9 @@
         {
             int indexer = 0;
             foreach (var driverLap in lapData.OrderBy(e => e.DidNotFinish).ThenByDescending(e => e.TotalScore))
+            {
                 driverLap.Position = ++indexer;
+            }
 
             dnfSum += lapData.Count(e => e.DidNotFinish);
             DnfSet.DataPoints.Add(new DataPoint(lapData.Key, dnfSum));
