--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -7,7 +7,7 @@
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Engines</MudText>
             <MudSpacer />
-            <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
+            <MudButton Variant="Variant.Outlined" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterEngine">New</MudButton>
         </MudStack>
     </MudPaper>
     <MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Dense="true">
